refactor: WeatherService 코드 리팩토링 완료 - 함수 쪼개기 - 변수명 변경 - 리턴형식 변경